# embassy-multitarget

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs
hal/: Cargo.toml  build.rs
hal/src/: hal_panic.rs  lib.rs  prelude.rs
targets/rp2040/: Cargo.toml  rust-toolchain.toml
targets/rp2040/src/: main.rs
targets/stm32f446re/: Cargo.toml
targets/stm32f446re/.cargo/: config.toml
targets/stm32f446re/src/: main.rs
targets/stm32g431cb/: Cargo.toml  build.rs
targets/stm32g431cb/.cargo/: config.toml
targets/stm32g431cb/src/: main.rs
targets/stm32h503/: Cargo.toml  Makefile.toml  rust-toolchain.toml
targets/stm32h503/.cargo/: config.toml
targets/stm32h503/src/: main.rs
targets/stm32h503cb/: Cargo.toml
targets/stm32h503cb/src/: main.rs
targets/stm32h743/: Cargo.toml  Makefile.toml  rust-toolchain.toml
targets/stm32h743/.cargo/: config.toml
targets/stm32h743/src/: main.rs
targets/stm32h743vi/: Cargo.toml
targets/stm32h743vi/src/: main.rs
tasks/blinky/: Cargo.toml
tasks/blinky/src/: lib.rs
tasks/exti_button/: Cargo.toml
tasks/exti_button/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
