[workspace]
members = ["hal", "targets/*"]
resolver = "2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[workspace.dependencies]
# embassy
embassy-executor = { version = "0.6.0" }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb" }
