[workspace]
members = ["xtask", "hal", "app", "targets/*"]
resolver = "2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[workspace.dependencies]
embassy-executor = { version = "0.6.0" }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy", rev = "4f08d5bc5ff0f765198665b1f37b6372f43b8567" }

ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", rev = "80c59c15c6b60ca66ed89e3a6a84656096cd8d2e" }
