[package]
name = "stm32h503"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { workspace = true }
hal = { path = "../../hal", features = [
  "target-stm32h503",
], default-features = false }
exti-button = { path = "../../tasks/exti_button" }
blinky = { path = "../../tasks/blinky" }
